--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "^5.0|^6.0|^7.0",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
         "php" : ">=7.2"
     },
     "require-dev": {
